Bug 283307 - Auth handler dialogs shouldn't be modal or shouldn't be shown all at the same time
Summary: Auth handler dialogs shouldn't be modal or shouldn't be shown all at the same...
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: auth-handler (other bugs)
Version First Reported In: git-latest
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks: 285413
  Show dependency treegraph
 
Reported: 2011-10-04 10:44 UTC by Daniele E. Domenichelli
Modified: 2012-07-06 12:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniele E. Domenichelli 2011-10-04 10:44:40 UTC
At the moment if you receive more than one sasl channel, auth handler shows all the dialog window, but in a modal way, therefore only to top one password can be inserted.

I'm not sure about which one should be the correct behaviour:
 * Show all the dialogs but non-modal.
 * Show just one window.

Comments?
Comment 1 Daniele E. Domenichelli 2011-12-27 15:23:08 UTC
Git commit 4d16fd6333d01cf9dabd9e5b5adc83416ef57f8d by Daniele E. Domenichelli.
Committed on 23/12/2011 at 15:50.
Pushed by ddomenichelli into branch 'master'.

Make dialogs modeless
Related: bug 283307

M  +27   -21   x-telepathy-password-auth-operation.cpp
M  +3    -0    x-telepathy-password-auth-operation.h

http://commits.kde.org/telepathy-auth-handler/4d16fd6333d01cf9dabd9e5b5adc83416ef57f8d