Make dialogs modeless

BUG: 283307